# locale_lint

./: .dockerignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.rst  Dockerfile  MANIFEST.in  README.md  README.rst  action.yml  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  dockerimage.yml  readme-sync.yml  setup.yml  test.yml
locale_lint/: __init__.py  cli.py  test_cli.py
scripts/: set-version
