[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization",
  "Topic :: Utilities"
]
dependencies = [
  "click>=8.0,<9.0",
  "translate-toolkit>=3.5.1,<3.16.0",
  "translation-finder>=2.11,<3.0"
]
description = "Weblate Locale Linter"
keywords = [
  "i18n l10n gettext git mercurial translate"
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
name = "locale_lint"
requires-python = ">=3.9"
version = "0.3.1"

[[project.authors]]
email = "michal@cihar.com"
name = "Michal Čihař"

[project.optional-dependencies]
lint = ["pre-commit==4.2.0"]
test = [
  "pytest",
  "pytest-cov"
]

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.scripts]
locale_lint = "locale_lint.cli:locale_lint"

[project.urls]
Documentation = "https://docs.weblate.org/"
Download = "https://github.com/WeblateOrg/locale_lint"
Funding = "https://weblate.org/donate/"
Homepage = "https://weblate.org/"
"Issue Tracker" = "https://github.com/WeblateOrg/locale_lint/issues"
"Source Code" = "https://github.com/WeblateOrg/locale_lint"
Twitter = "https://twitter.com/WeblateOrg"

[tool.ruff]
ignore = [
  "D10",  # TODO: we are missing many docstrings
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = [
  "E",
  "F",
  "B",
  "T10",
  "A",
  "C4",
  "C90",
  "YTT",
  "DJ",
  "UP",
  "D",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "RUF",
  "ERA",
  "ICN",
  "ISC",
  "EXE",
  "INP",
  "PIE",
  "G",
  "PYI",
  "Q",
  "SIM",
  "TID",
  "RSE",
  "T20",
  "RET",
  "SLF",
  "N"
]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.mccabe]
max-complexity = 16

[tool.setuptools]
include-package-data = true
packages = [
  "locale_lint"
]
platforms = [
  "any"
]
